[package]
name = "mav"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.102"
ash = "0.38.0"
ash-window = "0.13.0"
cgmath = "0.18.0"
gpu-allocator = "0.28.0"
log = "0.4.31"
png = "0.18.1"
pretty_env_logger = "0.5.0"
softbuffer = "0.4.8"
thiserror = "2.0.18"
tobj = "4.0.4"
vk-sync = "0.1.6"
winit = "0.31.0-beta.2"


